# affirmationsmaker

./: .envrc  .gitignore  AGENTS.md  Proverbs Affirmations.json  README.md  pyproject.toml  setup.sh
.plans/affirmations-builder/: CONTEXT.md  MASTER.md  plan.json
.plans/affirmations-builder/preplan/: GEMINI_PLAN_REVIEW.md  PLAN_OPTIONS.md
openspec/: project.md
openspec/changes/affirmations-builder/: design.md  proposal.md  tasks.md
projects/: biblical_wisdom.json  demo_project.json
reviews/gemini/: latest.md
src/affirmbeat/: web_ui.py
src/affirmbeat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/affirmbeat/assets/: default_presets.json
src/affirmbeat/cli/: main.py
src/affirmbeat/core/: content_check.py  hashing.py  paths.py  project.py
src/affirmbeat/dsp/: binaural.py  fades.py  limiter.py  loudness.py  pan.py  resample.py
src/affirmbeat/providers/: base.py  llm_ollama.py  music_file.py  music_placeholder.py  music_stable_audio.py  tts_dummy.py  tts_espeak.py  tts_piper1.py
src/affirmbeat/render/: export.py  mixer.py  music_bed.py  renderer.py  timeline.py
src/affirmbeat/script/: overlap_presets.py  scheduler.py  textgen.py
tests/: test_render_smoke.py
