[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "affirmbeat"
version = "0.1.0"
description = "Local-first affirmation audio renderer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AffirmBeat Studio"}]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "soundfile>=0.12",
  "pyloudnorm>=0.1",
  "pydantic>=2.6",
  "typer>=0.9",
  "streamlit>=1.30",
]

[project.scripts]
affirmbeat = "affirmbeat.cli.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
